added link to url

--- a/todo
+++ b/todo
@@ -13,7 +13,7 @@ autocomplete:
 
 contendidos:
 
-    - link a URL
+    - link a URL ✅
     - fecha y hora
     - filtros por source
     - boton hacia atras
