--- a/todo
+++ b/todo
@@ -12,7 +12,7 @@ autocomplete:
 
 
 temas:
-    - mostrar temas para agregar que no sean del usuario (marian)
+    - mostrar temas para agregar que no sean del usuario (marian) ✅
 
 contendidos:
 
